--- a/junior-career.html
+++ b/junior-career.html
@@ -451,7 +451,8 @@
     </ul>
   </div>
 
-<div style="background-color: #fef9e7; padding: 25px; border-radius: 12px; border: 1px solid #f9e79f; margin-bottom: 50px; box-shadow: 0 4px 15px rgba(0,0,0,0.05);">
+
+  <div style="background-color: #fef9e7; padding: 25px 15px; border-radius: 12px; border: 1px solid #f9e79f; margin-bottom: 50px; box-shadow: 0 4px 15px rgba(0,0,0,0.05);">
 <h3 style="margin-top: 0; color: #806600; font-size: 18px; display: flex; align-items: center; font-weight: 800;">
   <div style="margin-right: 12px; display: flex; align-items: center; justify-content: center; background: #fffbeb; width: 34px; height: 34px; border-radius: 10px; border: 1px solid #fef3c7;">
     <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="#806600" stroke-width="2.2" stroke-linecap="round" stroke-linejoin="round">
@@ -512,8 +513,8 @@
       <path d="M18 2H6v7a6 6 0 0 0 12 0V2z"></path>
     </svg>
   </div>
-  <div style="font-size: 13px;">
-          <b style="color: #ff5a00; display: block; margin-bottom: 3px; font-size: 15px;">FMG National Junior Champion</b>
+  <div>
+          <b style="color: #ff5a00; display: block; margin-bottom: 3px;">FMG National Junior Champion</b>
           Consecutive Seasons 2023–24 & 2024–25
         </div>
       </div>
@@ -523,15 +524,15 @@
       <polygon points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2"></polygon>
     </svg>
   </div>
-  <div style="font-size: 13px;">
-          <b style="color: #ffcc00; display: block; margin-bottom: 3px; font-size: 15px;">Billy Dettlaff Sportsmanship Award</b>
+  <div>
+          <b style="color: #ffcc00; display: block; margin-bottom: 3px;">Billy Dettlaff Sportsmanship Award</b>
           The Junior Players Championship 2024
         </div>
       </div>
       <div style="background: rgba(255,255,255,0.07); padding: 18px 20px; border-radius: 12px; border-left: 6px solid #ff5a00; display: flex; align-items: center;">
         <span style="font-size: 24px; margin-right: 15px; flex-shrink: 0;">🇲🇽</span>
-        <div style="font-size: 13px;">
-          <b style="color: #ff5a00; display: block; margin-bottom: 3px; font-size: 15px;">Team Mexico (National Representative)</b>
+        <div>
+          <b style="color: #ff5a00; display: block; margin-bottom: 3px;">Team Mexico (National Representative)</b>
           Member of the National Team in numerous International Junior Competitions
         </div>
       </div>
@@ -550,22 +551,22 @@
 </div>
 
      <div style="display: grid; grid-template-columns: repeat(2, 1fr); gap: 12px;">
-      <img src="https://lh3.googleusercontent.com/d/1kUFqUexNjY3lvhMw7rPsEmTMgVsvrGbR" onclick="popupJrGallery(0)" style="width:100%; height:140px; object-fit:cover; object-position:top; border-radius:8px; cursor:pointer; transition: transform 0.2s; box-shadow: 0 2px 5px rgba(0,0,0,0.1);" onmouseover="this.style.transform='scale(1.03)'" onmouseout="this.style.transform='scale(1)'">
+      <img src="https://lh3.googleusercontent.com/d/1kUFqUexNjY3lvhMw7rPsEmTMgVsvrGbR" onclick="popupJrGallery(0)" style="width:100%; height:140px; object-fit:cover; object-position:center 20%; border-radius:8px; cursor:pointer; transition: transform 0.2s; box-shadow: 0 2px 5px rgba(0,0,0,0.1);" onmouseover="this.style.transform='scale(1.03)'" onmouseout="this.style.transform='scale(1)'">
       <img src="https://lh3.googleusercontent.com/d/1IqCMgvk7V8AuhkJhJnGqYaV39tvOllUM" onclick="popupJrGallery(1)" style="width:100%; height:140px; object-fit:cover; object-position:center 15%; border-radius:8px; cursor:pointer; transition: transform 0.2s; box-shadow: 0 2px 5px rgba(0,0,0,0.1);" onmouseover="this.style.transform='scale(1.03)'" onmouseout="this.style.transform='scale(1)'">
-      <img src="https://lh3.googleusercontent.com/d/1FJJwsIL3C1NEdU4dJeb6smfxQd0a0ouP" onclick="popupJrGallery(2)" style="width:100%; height:140px; object-fit:cover; object-position:center 55%; border-radius:8px; cursor:pointer; transition: transform 0.2s; box-shadow: 0 2px 5px rgba(0,0,0,0.1);" onmouseover="this.style.transform='scale(1.03)'" onmouseout="this.style.transform='scale(1)'">
-      <img src="https://lh3.googleusercontent.com/d/11_jXXuy-vjwHs-QvBAdBPOFqV4ss4FpV" onclick="popupJrGallery(3)" style="width:100%; height:140px; object-fit:cover; object-position:center 55%; border-radius:8px; cursor:pointer; transition: transform 0.2s;" onmouseover="this.style.transform='scale(1.03)'" onmouseout="this.style.transform='scale(1)'">
+      <img src="https://lh3.googleusercontent.com/d/1FJJwsIL3C1NEdU4dJeb6smfxQd0a0ouP" onclick="popupJrGallery(2)" style="width:100%; height:140px; object-fit:cover; object-position:center 30%; border-radius:8px; cursor:pointer; transition: transform 0.2s; box-shadow: 0 2px 5px rgba(0,0,0,0.1);" onmouseover="this.style.transform='scale(1.03)'" onmouseout="this.style.transform='scale(1)'">
+      <img src="https://lh3.googleusercontent.com/d/11_jXXuy-vjwHs-QvBAdBPOFqV4ss4FpV" onclick="popupJrGallery(3)" style="width:100%; height:140px; object-fit:cover; object-position:center 30%; border-radius:8px; cursor:pointer; transition: transform 0.2s;" onmouseover="this.style.transform='scale(1.03)'" onmouseout="this.style.transform='scale(1)'">
       <img src="https://lh3.googleusercontent.com/d/1wQUkMMPZRWKAcV3s7bH3lXIUHO7KQcPU" onclick="popupJrGallery(4)" style="width:100%; height:140px; object-fit:cover; object-position:center 30%; border-radius:8px; cursor:pointer;">
-      <img src="https://lh3.googleusercontent.com/d/1CPl_yA8fN5tptbunyMGaOqo71THzl82z" onclick="popupJrGallery(5)" style="width:100%; height:140px; object-fit:cover; border-radius:8px; cursor:pointer;">
-      <img src="https://lh3.googleusercontent.com/d/1aR2s2b2Az_tsV0UoRIPE0V9dj_SY05Nc" onclick="popupJrGallery(6)" style="width:100%; height:140px; object-fit:cover; border-radius:8px; cursor:pointer;">
-      <img src="https://lh3.googleusercontent.com/d/1fVzAzv6aAfSrUkSV-q42TILbEelkAWiQ" onclick="popupJrGallery(7)" style="width:100%; height:140px; object-fit:cover; object-position:left 5%; border-radius:8px; cursor:pointer;">
-      <img src="https://lh3.googleusercontent.com/d/1o4GgblC9pMcZSQaBhRXonEvxG_CzFfAH" onclick="popupJrGallery(8)" style="width:100%; height:140px; object-fit:cover; object-position:top; border-radius:8px; cursor:pointer;">
-      <img src="https://lh3.googleusercontent.com/d/1KZXxeONuu3xPdiWUtmvofSgC4Zqz2Hk_" onclick="popupJrGallery(9)" style="width:100%; height:140px; object-fit:cover; border-radius:8px; cursor:pointer;">
+      <img src="https://lh3.googleusercontent.com/d/1CPl_yA8fN5tptbunyMGaOqo71THzl82z" onclick="popupJrGallery(5)" style="width:100%; height:140px; object-fit:cover; object-position:center 20%; border-radius:8px; cursor:pointer;">
+      <img src="https://lh3.googleusercontent.com/d/1aR2s2b2Az_tsV0UoRIPE0V9dj_SY05Nc" onclick="popupJrGallery(6)" style="width:100%; height:140px; object-fit:cover; object-position:center 20%; border-radius:8px; cursor:pointer;">
+      <img src="https://lh3.googleusercontent.com/d/1fVzAzv6aAfSrUkSV-q42TILbEelkAWiQ" onclick="popupJrGallery(7)" style="width:100%; height:140px; object-fit:cover; object-position:center 10%; border-radius:8px; cursor:pointer;">
+      <img src="https://lh3.googleusercontent.com/d/1o4GgblC9pMcZSQaBhRXonEvxG_CzFfAH" onclick="popupJrGallery(8)" style="width:100%; height:140px; object-fit:cover; object-position:center 15%; border-radius:8px; cursor:pointer;">
+      <img src="https://lh3.googleusercontent.com/d/1KZXxeONuu3xPdiWUtmvofSgC4Zqz2Hk_" onclick="popupJrGallery(9)" style="width:100%; height:140px; object-fit:cover; object-position:center 20%; border-radius:8px; cursor:pointer;">
       <img src="https://lh3.googleusercontent.com/d/1pjez52n31-EtRUIzEi5SROgefsmGSvdo" onclick="popupJrGallery(10)" style="width:100%; height:140px; object-fit:cover; object-position:center 30%; border-radius:8px; cursor:pointer;">
-      <img src="https://lh3.googleusercontent.com/d/1_pCv0hofMD4NffVsKXF-_9QfY_hqG_mC" onclick="popupJrGallery(11)" style="width:100%; height:140px; object-fit:cover; object-position:top; border-radius:8px; cursor:pointer;">
+      <img src="https://lh3.googleusercontent.com/d/1_pCv0hofMD4NffVsKXF-_9QfY_hqG_mC" onclick="popupJrGallery(11)" style="width:100%; height:140px; object-fit:cover; object-position:center 10%; border-radius:8px; cursor:pointer;">
       <img src="https://lh3.googleusercontent.com/d/1Qc_Pv8gsFBae-bMk3Eudo5EnguKnP8Mg" onclick="popupJrGallery(12)" style="width:100%; height:140px; object-fit:cover; object-position:center 30%; border-radius:8px; cursor:pointer;">
       <img src="https://lh3.googleusercontent.com/d/1yk8kSpHTCxGa725r_2eUEcoRmMgLvi2V" onclick="popupJrGallery(13)" style="width:100%; height:140px; object-fit:cover; object-position:center 25%; border-radius:8px; cursor:pointer;">
-      <img src="https://lh3.googleusercontent.com/d/1fG3zb436wgqA5OzjEiqzUyoSSnqJtEP2" onclick="popupJrGallery(14)" style="width:100%; height:140px; object-fit:cover; border-radius:8px; cursor:pointer;">
-      <img src="https://lh3.googleusercontent.com/d/1ZSkAybCXpbResui5UyzkslKxn1ewbcnH" onclick="popupJrGallery(15)" style="width:100%; height:140px; object-fit:cover; border-radius:8px; cursor:pointer;">
+      <img src="https://lh3.googleusercontent.com/d/1fG3zb436wgqA5OzjEiqzUyoSSnqJtEP2" onclick="popupJrGallery(14)" style="width:100%; height:140px; object-fit:cover; object-position:center 20%; border-radius:8px; cursor:pointer;">
+      <img src="https://lh3.googleusercontent.com/d/1ZSkAybCXpbResui5UyzkslKxn1ewbcnH" onclick="popupJrGallery(15)" style="width:100%; height:140px; object-fit:cover; object-position:center 20%; border-radius:8px; cursor:pointer;">
     </div>
   </div>
 
