--- a/junior-career.html
+++ b/junior-career.html
@@ -452,7 +452,7 @@
   </div>
 
 
-  <div style="background-color: #fef9e7; padding: 25px 15px; border-radius: 12px; border: 1px solid #f9e79f; margin-bottom: 50px; box-shadow: 0 4px 15px rgba(0,0,0,0.05);">
+   <div style="background-color: #fef9e7; padding: 25px; border-radius: 12px; border: 1px solid #f9e79f; margin-bottom: 50px; box-shadow: 0 4px 15px rgba(0,0,0,0.05);">
 <h3 style="margin-top: 0; color: #806600; font-size: 18px; display: flex; align-items: center; font-weight: 800;">
   <div style="margin-right: 12px; display: flex; align-items: center; justify-content: center; background: #fffbeb; width: 34px; height: 34px; border-radius: 10px; border: 1px solid #fef3c7;">
     <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="#806600" stroke-width="2.2" stroke-linecap="round" stroke-linejoin="round">
@@ -462,7 +462,7 @@
   </div>
   <span style="letter-spacing: -0.5px;">Podium Finishes & Runner-ups</span>
 </h3>
-    <ul style="font-size: 14px; margin-bottom: 0; line-height: 1.8; color: #5d4037; padding-left: 20px;">
+    <ul style="font-size: 14px; margin-bottom: 0; line-height: 1.8; color: #5d4037;">
       <li><b>2025:</b> Campeonato Nacional de Parejas (2nd, Playoff) | Final Day (<span style="color:#d32f2f; font-weight: bold;">69, -3</span>)</li>
       <li><b>2024:</b> Copa Sureste (225, 2nd) | II Copa GADO (<span style="color:#d32f2f; font-weight: bold;">211, 2nd</span>) | Amateur West Mexico (2nd)</li>
       <li><b>2023:</b> GADO Amateur West of Mexico (144 E, 2nd) | Copa Pacífico (<span style="color:#d32f2f; font-weight: bold;">212, 2nd</span>)</li>
@@ -474,7 +474,7 @@
       <h3 style="font-size: 22px; color: #0c2340; margin: 0;">Final Junior Rankings</h3>
       <p style="font-size: 14px; color: #d32f2f; font-weight: bold; margin-top: 5px;">As of August 2025 (Upon Junior Graduation)</p>
     </div>
-    <div id="rankings-grid" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(240px, 1fr)); gap: 20px;">
+    <div id="rankings-grid" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 20px;">
       
       <div style="background: #f1f4f9; padding: 25px; border-radius: 15px; border: 1px solid #d1d9e6; text-align: center; box-shadow: 0 4px 10px rgba(0,0,0,0.03);">
         <div style="font-size: 13px; color: #7f8c8d; text-transform: uppercase; font-weight: bold; letter-spacing: 1px;">WAGR (Mexico Junior)</div>
@@ -497,13 +497,13 @@
     </div>
   </div>
 
-<div style="background-color: #0c2340; color: white; padding: 40px 20px; border-radius: 20px; margin-bottom: 60px; box-shadow: 0 10px 30px rgba(12, 35, 64, 0.2);">
+<div style="background-color: #0c2340; color: white; padding: 40px; border-radius: 20px; margin-bottom: 60px; box-shadow: 0 10px 30px rgba(12, 35, 64, 0.2);">
     <h3 style="font-size: 22px; color: #ff5a00; margin-top: 0; margin-bottom: 25px; border-bottom: 1px solid rgba(255, 90, 0, 0.3); padding-bottom: 10px;">
       Major Honors & Recognition
     </h3>
     <div style="display: grid; grid-template-columns: 1fr; gap: 20px;">
-<div style="background: rgba(255,255,255,0.07); padding: 18px 20px; border-radius: 12px; border-left: 6px solid #806600; display: flex; align-items: center;">
-  <div style="margin-right: 15px; flex-shrink: 0; display: flex; align-items: center; justify-content: center; background: rgba(128, 102, 0, 0.2); width: 44px; height: 44px; border-radius: 10px;">
+<div style="background: rgba(255,255,255,0.07); padding: 18px 25px; border-radius: 12px; border-left: 6px solid #806600; display: flex; align-items: center;">
+  <div style="margin-right: 15px; display: flex; align-items: center; justify-content: center; background: rgba(128, 102, 0, 0.2); width: 44px; height: 44px; border-radius: 10px;">
     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#806600" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
       <path d="M6 9H4.5a2.5 2.5 0 0 1 0-5H6"></path>
       <path d="M18 9h1.5a2.5 2.5 0 0 0 0-5H18"></path>
@@ -518,8 +518,8 @@
           Consecutive Seasons 2023–24 & 2024–25
         </div>
       </div>
-<div style="background: rgba(255,255,255,0.12); padding: 18px 20px; border-radius: 12px; border: 1px solid rgba(255,255,255,0.2); display: flex; align-items: center;">
-  <div style="margin-right: 15px; flex-shrink: 0; display: flex; align-items: center; justify-content: center; background: rgba(255, 255, 255, 0.1); width: 44px; height: 44px; border-radius: 10px;">
+<div style="background: rgba(255,255,255,0.12); padding: 18px 25px; border-radius: 12px; border: 1px solid rgba(255,255,255,0.2); display: flex; align-items: center;">
+  <div style="margin-right: 15px; display: flex; align-items: center; justify-content: center; background: rgba(255, 255, 255, 0.1); width: 44px; height: 44px; border-radius: 10px;">
     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#806600" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
       <polygon points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2"></polygon>
     </svg>
@@ -529,8 +529,8 @@
           The Junior Players Championship 2024
         </div>
       </div>
-      <div style="background: rgba(255,255,255,0.07); padding: 18px 20px; border-radius: 12px; border-left: 6px solid #ff5a00; display: flex; align-items: center;">
-        <span style="font-size: 24px; margin-right: 15px; flex-shrink: 0;">🇲🇽</span>
+      <div style="background: rgba(255,255,255,0.07); padding: 18px 25px; border-radius: 12px; border-left: 6px solid #ff5a00; display: flex; align-items: center;">
+        <span style="font-size: 24px; margin-right: 15px;">🇲🇽</span>
         <div>
           <b style="color: #ff5a00; display: block; margin-bottom: 3px;">Team Mexico (National Representative)</b>
           Member of the National Team in numerous International Junior Competitions
@@ -550,23 +550,23 @@
   <h3 style="margin: 0; color: #1b5e20; font-size: 18px; letter-spacing: 1px; text-transform: uppercase; font-weight: 900;">Junior Career Gallery (16 Photos)</h3>
 </div>
 
-     <div style="display: grid; grid-template-columns: repeat(2, 1fr); gap: 12px;">
-      <img src="https://lh3.googleusercontent.com/d/1kUFqUexNjY3lvhMw7rPsEmTMgVsvrGbR" onclick="popupJrGallery(0)" style="width:100%; height:140px; object-fit:cover; object-position:center 20%; border-radius:8px; cursor:pointer; transition: transform 0.2s; box-shadow: 0 2px 5px rgba(0,0,0,0.1);" onmouseover="this.style.transform='scale(1.03)'" onmouseout="this.style.transform='scale(1)'">
-      <img src="https://lh3.googleusercontent.com/d/1IqCMgvk7V8AuhkJhJnGqYaV39tvOllUM" onclick="popupJrGallery(1)" style="width:100%; height:140px; object-fit:cover; object-position:center 15%; border-radius:8px; cursor:pointer; transition: transform 0.2s; box-shadow: 0 2px 5px rgba(0,0,0,0.1);" onmouseover="this.style.transform='scale(1.03)'" onmouseout="this.style.transform='scale(1)'">
-      <img src="https://lh3.googleusercontent.com/d/1FJJwsIL3C1NEdU4dJeb6smfxQd0a0ouP" onclick="popupJrGallery(2)" style="width:100%; height:140px; object-fit:cover; object-position:center 30%; border-radius:8px; cursor:pointer; transition: transform 0.2s; box-shadow: 0 2px 5px rgba(0,0,0,0.1);" onmouseover="this.style.transform='scale(1.03)'" onmouseout="this.style.transform='scale(1)'">
-      <img src="https://lh3.googleusercontent.com/d/11_jXXuy-vjwHs-QvBAdBPOFqV4ss4FpV" onclick="popupJrGallery(3)" style="width:100%; height:140px; object-fit:cover; object-position:center 30%; border-radius:8px; cursor:pointer; transition: transform 0.2s;" onmouseover="this.style.transform='scale(1.03)'" onmouseout="this.style.transform='scale(1)'">
-      <img src="https://lh3.googleusercontent.com/d/1wQUkMMPZRWKAcV3s7bH3lXIUHO7KQcPU" onclick="popupJrGallery(4)" style="width:100%; height:140px; object-fit:cover; object-position:center 30%; border-radius:8px; cursor:pointer;">
-      <img src="https://lh3.googleusercontent.com/d/1CPl_yA8fN5tptbunyMGaOqo71THzl82z" onclick="popupJrGallery(5)" style="width:100%; height:140px; object-fit:cover; object-position:center 20%; border-radius:8px; cursor:pointer;">
-      <img src="https://lh3.googleusercontent.com/d/1aR2s2b2Az_tsV0UoRIPE0V9dj_SY05Nc" onclick="popupJrGallery(6)" style="width:100%; height:140px; object-fit:cover; object-position:center 20%; border-radius:8px; cursor:pointer;">
-      <img src="https://lh3.googleusercontent.com/d/1fVzAzv6aAfSrUkSV-q42TILbEelkAWiQ" onclick="popupJrGallery(7)" style="width:100%; height:140px; object-fit:cover; object-position:center 10%; border-radius:8px; cursor:pointer;">
-      <img src="https://lh3.googleusercontent.com/d/1o4GgblC9pMcZSQaBhRXonEvxG_CzFfAH" onclick="popupJrGallery(8)" style="width:100%; height:140px; object-fit:cover; object-position:center 15%; border-radius:8px; cursor:pointer;">
-      <img src="https://lh3.googleusercontent.com/d/1KZXxeONuu3xPdiWUtmvofSgC4Zqz2Hk_" onclick="popupJrGallery(9)" style="width:100%; height:140px; object-fit:cover; object-position:center 20%; border-radius:8px; cursor:pointer;">
-      <img src="https://lh3.googleusercontent.com/d/1pjez52n31-EtRUIzEi5SROgefsmGSvdo" onclick="popupJrGallery(10)" style="width:100%; height:140px; object-fit:cover; object-position:center 30%; border-radius:8px; cursor:pointer;">
-      <img src="https://lh3.googleusercontent.com/d/1_pCv0hofMD4NffVsKXF-_9QfY_hqG_mC" onclick="popupJrGallery(11)" style="width:100%; height:140px; object-fit:cover; object-position:center 10%; border-radius:8px; cursor:pointer;">
-      <img src="https://lh3.googleusercontent.com/d/1Qc_Pv8gsFBae-bMk3Eudo5EnguKnP8Mg" onclick="popupJrGallery(12)" style="width:100%; height:140px; object-fit:cover; object-position:center 30%; border-radius:8px; cursor:pointer;">
-      <img src="https://lh3.googleusercontent.com/d/1yk8kSpHTCxGa725r_2eUEcoRmMgLvi2V" onclick="popupJrGallery(13)" style="width:100%; height:140px; object-fit:cover; object-position:center 25%; border-radius:8px; cursor:pointer;">
-      <img src="https://lh3.googleusercontent.com/d/1fG3zb436wgqA5OzjEiqzUyoSSnqJtEP2" onclick="popupJrGallery(14)" style="width:100%; height:140px; object-fit:cover; object-position:center 20%; border-radius:8px; cursor:pointer;">
-      <img src="https://lh3.googleusercontent.com/d/1ZSkAybCXpbResui5UyzkslKxn1ewbcnH" onclick="popupJrGallery(15)" style="width:100%; height:140px; object-fit:cover; object-position:center 20%; border-radius:8px; cursor:pointer;">
+     <div style="display: grid; grid-template-columns: repeat(4, 1fr); gap: 12px;">
+      <img src="https://lh3.googleusercontent.com/d/1kUFqUexNjY3lvhMw7rPsEmTMgVsvrGbR" onclick="popupJrGallery(0)" style="width:100%; height:120px; object-fit:cover; object-position:top; border-radius:8px; cursor:pointer; transition: transform 0.2s; box-shadow: 0 2px 5px rgba(0,0,0,0.1);" onmouseover="this.style.transform='scale(1.03)'" onmouseout="this.style.transform='scale(1)'">
+      <img src="https://lh3.googleusercontent.com/d/1IqCMgvk7V8AuhkJhJnGqYaV39tvOllUM" onclick="popupJrGallery(1)" style="width:100%; height:120px; object-fit:cover; object-position:center 15%; border-radius:8px; cursor:pointer; transition: transform 0.2s; box-shadow: 0 2px 5px rgba(0,0,0,0.1);" onmouseover="this.style.transform='scale(1.03)'" onmouseout="this.style.transform='scale(1)'">
+      <img src="https://lh3.googleusercontent.com/d/1FJJwsIL3C1NEdU4dJeb6smfxQd0a0ouP" onclick="popupJrGallery(2)" style="width:100%; height:120px; object-fit:cover; object-position:center 55%; border-radius:8px; cursor:pointer; transition: transform 0.2s; box-shadow: 0 2px 5px rgba(0,0,0,0.1);" onmouseover="this.style.transform='scale(1.03)'" onmouseout="this.style.transform='scale(1)'">
+      <img src="https://lh3.googleusercontent.com/d/11_jXXuy-vjwHs-QvBAdBPOFqV4ss4FpV" onclick="popupJrGallery(3)" style="width:100%; height:120px; object-fit:cover; object-position:center 55%; border-radius:8px; cursor:pointer; transition: transform 0.2s;" onmouseover="this.style.transform='scale(1.03)'" onmouseout="this.style.transform='scale(1)'">
+      <img src="https://lh3.googleusercontent.com/d/1wQUkMMPZRWKAcV3s7bH3lXIUHO7KQcPU" onclick="popupJrGallery(4)" style="width:100%; height:120px; object-fit:cover; object-position:center 30%; border-radius:8px; cursor:pointer;">
+      <img src="https://lh3.googleusercontent.com/d/1CPl_yA8fN5tptbunyMGaOqo71THzl82z" onclick="popupJrGallery(5)" style="width:100%; height:120px; object-fit:cover; border-radius:8px; cursor:pointer;">
+      <img src="https://lh3.googleusercontent.com/d/1aR2s2b2Az_tsV0UoRIPE0V9dj_SY05Nc" onclick="popupJrGallery(6)" style="width:100%; height:120px; object-fit:cover; border-radius:8px; cursor:pointer;">
+      <img src="https://lh3.googleusercontent.com/d/1fVzAzv6aAfSrUkSV-q42TILbEelkAWiQ" onclick="popupJrGallery(7)" style="width:100%; height:120px; object-fit:cover; object-position:left 5%; border-radius:8px; cursor:pointer;">
+      <img src="https://lh3.googleusercontent.com/d/1o4GgblC9pMcZSQaBhRXonEvxG_CzFfAH" onclick="popupJrGallery(8)" style="width:100%; height:120px; object-fit:cover; object-position:top; border-radius:8px; cursor:pointer;">
+      <img src="https://lh3.googleusercontent.com/d/1KZXxeONuu3xPdiWUtmvofSgC4Zqz2Hk_" onclick="popupJrGallery(9)" style="width:100%; height:120px; object-fit:cover; border-radius:8px; cursor:pointer;">
+      <img src="https://lh3.googleusercontent.com/d/1pjez52n31-EtRUIzEi5SROgefsmGSvdo" onclick="popupJrGallery(10)" style="width:100%; height:120px; object-fit:cover; object-position:center 30%; border-radius:8px; cursor:pointer;">
+      <img src="https://lh3.googleusercontent.com/d/1_pCv0hofMD4NffVsKXF-_9QfY_hqG_mC" onclick="popupJrGallery(11)" style="width:100%; height:120px; object-fit:cover; object-position:top; border-radius:8px; cursor:pointer;">
+      <img src="https://lh3.googleusercontent.com/d/1Qc_Pv8gsFBae-bMk3Eudo5EnguKnP8Mg" onclick="popupJrGallery(12)" style="width:100%; height:120px; object-fit:cover; object-position:center 30%; border-radius:8px; cursor:pointer;">
+      <img src="https://lh3.googleusercontent.com/d/1yk8kSpHTCxGa725r_2eUEcoRmMgLvi2V" onclick="popupJrGallery(13)" style="width:100%; height:120px; object-fit:cover; object-position:center 25%; border-radius:8px; cursor:pointer;">
+      <img src="https://lh3.googleusercontent.com/d/1fG3zb436wgqA5OzjEiqzUyoSSnqJtEP2" onclick="popupJrGallery(14)" style="width:100%; height:120px; object-fit:cover; border-radius:8px; cursor:pointer;">
+      <img src="https://lh3.googleusercontent.com/d/1ZSkAybCXpbResui5UyzkslKxn1ewbcnH" onclick="popupJrGallery(15)" style="width:100%; height:120px; object-fit:cover; border-radius:8px; cursor:pointer;">
     </div>
   </div>
 
@@ -634,5 +634,6 @@
       Official Achievement Record • Joshua Hong
     </p>
   </div>
-
-
+</div> 
+</body>
+</html>
