--- a/junior-career.html
+++ b/junior-career.html
@@ -423,12 +423,20 @@
     <h4 style="color: #1b5e20; border-bottom: 2px solid #1b5e20; padding-bottom: 5px; margin-bottom: 15px;">Season 2024</h4>
     <div class="table-container" style="overflow-x: hidden; margin-bottom: 30px;">
       <table style="width: 100%; border-collapse: collapse; font-size: 12px; box-shadow: 0 2px 5px rgba(0,0,0,0.05); table-layout: fixed;">
+        <thead>
+          <tr style="background: #1b5e20; color: white; font-weight: bold;">
+            <td style="padding: 10px 4px; width: 20%;">Date</td>
+            <td style="padding: 10px 4px; width: 53%;">Tournament (Category)</td>
+            <td style="padding: 10px 4px; width: 17%;">Score</td>
+            <td style="padding: 10px 4px; width: 10%;">Result</td>
+          </tr>
+        </thead>
         <tbody>
           <tr style="border-bottom: 1px solid #eee;">
-            <td style="padding: 10px 4px; width: 20%;">Nov 28</td>
-            <td style="padding: 10px 4px; width: 50%;">3rd Stage Zona Centro (WAGR)</td>
-            <td style="padding: 10px 4px; width: 20%; color:#d32f2f; font-weight: bold;">211 (−5)</td>
-            <td style="padding: 10px 4px; width: 10%; font-weight: bold; color: #1b5e20;">1st</td>
+            <td style="padding: 10px 4px;">Nov 28</td>
+            <td style="padding: 10px 4px;">3rd Stage Zona Centro (WAGR)</td>
+            <td style="padding: 10px 4px; color:#d32f2f; font-weight: bold;">211 (−5)</td>
+            <td style="padding: 10px 4px; font-weight: bold; color: #1b5e20;">1st</td>
           </tr>
           <tr style="border-bottom: 1px solid #eee; background: #fcfcfc;"><td style="padding: 10px 4px;">Oct 31</td><td style="padding: 10px 4px;">Copa Pacífico (WAGR)</td><td style="padding: 10px 4px; color:#d32f2f; font-weight: bold;">206 (−10)</td><td style="padding: 10px 4px; font-weight: bold; color: #1b5e20;">1st</td></tr>
           <tr style="border-bottom: 1px solid #eee;"><td style="padding: 10px 4px;">Oct 17</td><td style="padding: 10px 4px;">2nd Stage Zona Centro (WAGR)</td><td style="padding: 10px 4px; color:#d32f2f; font-weight: bold;">213 (−3)</td><td style="padding: 10px 4px; font-weight: bold; color: #1b5e20;">1st</td></tr>
