--- a/index.html
+++ b/index.html
@@ -350,43 +350,60 @@
 
 
   
-<div class="activity-card">
-    <div style="padding: 15px 20px; display: flex; align-items: center; justify-content: space-between; flex-wrap: wrap; gap: 15px;">
-      <div style="display: flex; align-items: center; gap: 15px;">
-        <div style="display: flex; align-items: center; gap: 8px; background: #0c2340; padding: 5px 10px; border-radius: 6px;">
-          <span class="status-dot"></span>
-          <span style="color: #ffffff; font-size: 10px; font-weight: 800; letter-spacing: 0.5px; text-transform: uppercase;">IN PROGRESS</span>
+<div class="activity-card" style="background: #ffffff; border-radius: 12px; border: 1px solid #e2e8f0; box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05); overflow: hidden;">
+    <div style="padding: 20px; display: flex; align-items: center; justify-content: space-between; flex-wrap: wrap; gap: 20px;">
+      <div style="display: flex; align-items: flex-start; gap: 20px;">
+        <div style="display: flex; align-items: center; gap: 8px; background: #0c2340; padding: 6px 12px; border-radius: 6px; flex-shrink: 0;">
+          <span class="status-dot" style="width: 6px; height: 6px; background-color: #10b981; border-radius: 50%; display: inline-block;"></span>
+          <span style="color: #ffffff; font-size: 10px; font-weight: 800; letter-spacing: 0.8px; text-transform: uppercase;">IN PROGRESS</span>
         </div>
-        <div style="display: flex; flex-direction: column; gap: 5px;">
-          <div style="display: flex; align-items: center; gap: 8px;">
-            <span style="color: #0c2340; font-weight: 800; font-size: 15px;">Compadres Collegiate</span>
-            <span style="color: #94a3b8; font-size: 12px; font-weight: 700;">(Feb 1-3)</span>
+
+        <div style="display: flex; flex-direction: column; gap: 12px;">
+          <div>
+            <div style="display: flex; align-items: center; gap: 10px; margin-bottom: 2px;">
+              <span style="color: #0c2340; font-weight: 900; font-size: 17px; letter-spacing: -0.3px;">Compadres Collegiate</span>
+              <span style="color: #94a3b8; font-size: 13px; font-weight: 700;">(Feb 1-3)</span>
+            </div>
+            <span style="color: #64748b; font-size: 12px; font-weight: 600; display: block;">Iberostar Playa Paraiso, Mexico</span>
           </div>
           
-          <table style="border-collapse: collapse; margin-top: 2px;">
-            <thead>
-              <tr>
-                <th style="color: #94a3b8; font-size: 9px; font-weight: 800; text-align: left; padding: 0 12px 2px 0; text-transform: uppercase;">R1-R2-R3</th>
-                <th style="color: #94a3b8; font-size: 9px; font-weight: 800; text-align: center; padding: 0 12px 2px 12px; text-transform: uppercase;">Par</th>
-                <th style="color: #94a3b8; font-size: 9px; font-weight: 800; text-align: center; padding: 0 12px 2px 12px; text-transform: uppercase;">Total</th>
-                <th style="color: #94a3b8; font-size: 9px; font-weight: 800; text-align: center; padding: 0 0 2px 12px; text-transform: uppercase;">Rank</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td style="color: #e74c3c; font-size: 13px; font-weight: 900; padding: 0 12px 0 0; border-right: 1px solid #e2e8f0;">70 - &nbsp;&nbsp; - &nbsp;&nbsp;</td>
-                <td style="color: #e74c3c; font-size: 13px; font-weight: 900; text-align: center; padding: 0 12px; border-right: 1px solid #e2e8f0;">-2</td>
-                <td style="color: #0c2340; font-size: 13px; font-weight: 900; text-align: center; padding: 0 12px; border-right: 1px solid #e2e8f0;">70</td>
-                <td style="color: #0c2340; font-size: 13px; font-weight: 900; text-align: center; padding: 0 0 0 12px;">1</td>
-              </tr>
-            </tbody>
-          </table>
-          
-          <span style="color: #64748b; font-size: 11px; font-weight: 500; margin-top: 2px;">Iberostar Playa Paraiso, Mexico</span>
+          <div style="background: #f8fafc; border-radius: 8px; padding: 12px 16px; border: 1px solid #f1f5f9;">
+            <table style="border-collapse: collapse; width: 100%; min-width: 240px;">
+              <thead>
+                <tr>
+                  <th style="color: #94a3b8; font-size: 9px; font-weight: 800; text-align: left; padding-bottom: 6px; text-transform: uppercase; letter-spacing: 0.5px; border-bottom: 1px solid #e2e8f0;">R1-R2-R3</th>
+                  <th style="color: #94a3b8; font-size: 9px; font-weight: 800; text-align: center; padding-bottom: 6px; text-transform: uppercase; letter-spacing: 0.5px; border-bottom: 1px solid #e2e8f0; width: 60px;">Par</th>
+                  <th style="color: #94a3b8; font-size: 9px; font-weight: 800; text-align: center; padding-bottom: 6px; text-transform: uppercase; letter-spacing: 0.5px; border-bottom: 1px solid #e2e8f0; width: 60px;">Total</th>
+                  <th style="color: #94a3b8; font-size: 9px; font-weight: 800; text-align: center; padding-bottom: 6px; text-transform: uppercase; letter-spacing: 0.5px; border-bottom: 1px solid #e2e8f0; width: 60px;">Rank</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td style="padding-top: 8px; vertical-align: bottom;">
+                    <div style="display: flex; align-items: center; gap: 8px;">
+                      <span style="color: #e74c3c; font-size: 16px; font-weight: 900;">70</span>
+                      <span style="color: #cbd5e1; font-size: 16px; font-weight: 400;">—</span>
+                      <span style="color: #cbd5e1; font-size: 16px; font-weight: 400;">—</span>
+                    </div>
+                  </td>
+                  <td style="padding-top: 8px; text-align: center; vertical-align: bottom;">
+                    <span style="color: #e74c3c; font-size: 16px; font-weight: 900;">-2</span>
+                  </td>
+                  <td style="padding-top: 8px; text-align: center; vertical-align: bottom;">
+                    <span style="color: #0c2340; font-size: 16px; font-weight: 900;">70</span>
+                  </td>
+                  <td style="padding-top: 8px; text-align: center; vertical-align: bottom;">
+                    <div style="display: inline-flex; align-items: center; justify-content: center; background: #0c2340; color: #ffffff; width: 24px; height: 24px; border-radius: 4px; font-size: 13px; font-weight: 900;">1</div>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
         </div>
       </div>
-      <a href="ncaa-stats.html#Tournament-Schedule-Scoring" class="icon-link" style="background: #f8fafc; padding: 8px 12px; border-radius: 6px; border: 1px solid #e2e8f0; display: flex; align-items: center; gap: 6px; text-decoration: none;">
-        <span style="color: #0c2340; font-size: 11px; font-weight: 800; text-transform: uppercase; letter-spacing: 0.5px;">VIEW</span>
+
+      <a href="ncaa-stats.html#Tournament-Schedule-Scoring" style="background: #ffffff; padding: 10px 18px; border-radius: 8px; border: 1px solid #e2e8f0; display: flex; align-items: center; gap: 8px; text-decoration: none; transition: all 0.2s ease; box-shadow: 0 2px 4px rgba(0,0,0,0.02);">
+        <span style="color: #0c2340; font-size: 12px; font-weight: 800; text-transform: uppercase; letter-spacing: 0.5px;">VIEW</span>
         <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="3" stroke-linecap="round" stroke-linejoin="round">
           <line x1="7" y1="17" x2="17" y2="7"></line>
           <polyline points="7 7 17 7 17 17"></polyline>
